--- a/WalEAssignment/WalEAssignment/Base.lproj/Main.storyboard
+++ b/WalEAssignment/WalEAssignment/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="pk2-w5-v29">
-                                <rect key="frame" x="57" y="613" width="300" height="199"/>
+                                <rect key="frame" x="0.0" y="613" width="414" height="199"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -77,7 +77,7 @@
                             <constraint firstItem="6xN-KZ-gCF" firstAttribute="top" secondItem="52E-dh-XPU" secondAttribute="bottom" constant="40" id="7Oe-nx-r9Z"/>
                             <constraint firstItem="8bu-z9-vTk" firstAttribute="centerX" secondItem="gmh-p2-bcE" secondAttribute="centerX" id="Euf-nE-jLS"/>
                             <constraint firstItem="pk2-w5-v29" firstAttribute="centerX" secondItem="gmh-p2-bcE" secondAttribute="centerX" id="Iuw-X9-lUh"/>
-                            <constraint firstItem="pk2-w5-v29" firstAttribute="leading" secondItem="zSJ-pB-xkY" secondAttribute="leading" constant="57" id="Mnc-Q5-Wyy"/>
+                            <constraint firstItem="pk2-w5-v29" firstAttribute="leading" secondItem="zSJ-pB-xkY" secondAttribute="leading" id="Mnc-Q5-Wyy"/>
                             <constraint firstItem="nS2-GU-iTu" firstAttribute="leading" secondItem="zSJ-pB-xkY" secondAttribute="leading" constant="20" id="NNt-cf-HgX"/>
                             <constraint firstItem="zSJ-pB-xkY" firstAttribute="bottom" secondItem="pk2-w5-v29" secondAttribute="bottom" constant="50" id="Qwo-Jm-QCo"/>
                             <constraint firstItem="6xN-KZ-gCF" firstAttribute="centerX" secondItem="gmh-p2-bcE" secondAttribute="centerX" id="RQy-w4-ocy"/>
@@ -85,7 +85,7 @@
                             <constraint firstItem="8bu-z9-vTk" firstAttribute="leading" secondItem="zSJ-pB-xkY" secondAttribute="leading" constant="57" id="TSO-np-P9H"/>
                             <constraint firstItem="52E-dh-XPU" firstAttribute="top" secondItem="zSJ-pB-xkY" secondAttribute="top" constant="40" id="XgA-o4-tBf"/>
                             <constraint firstItem="zSJ-pB-xkY" firstAttribute="trailing" secondItem="8bu-z9-vTk" secondAttribute="trailing" constant="57" id="bbm-7U-Hp7"/>
-                            <constraint firstItem="zSJ-pB-xkY" firstAttribute="trailing" secondItem="pk2-w5-v29" secondAttribute="trailing" constant="57" id="hEF-Vf-YjI"/>
+                            <constraint firstItem="zSJ-pB-xkY" firstAttribute="trailing" secondItem="pk2-w5-v29" secondAttribute="trailing" id="hEF-Vf-YjI"/>
                             <constraint firstItem="zSJ-pB-xkY" firstAttribute="trailing" secondItem="52E-dh-XPU" secondAttribute="trailing" constant="20" id="kQK-Ns-Yfz"/>
                             <constraint firstItem="pk2-w5-v29" firstAttribute="top" secondItem="8bu-z9-vTk" secondAttribute="bottom" constant="40" id="nTp-jX-e4b"/>
                             <constraint firstItem="52E-dh-XPU" firstAttribute="leading" secondItem="zSJ-pB-xkY" secondAttribute="leading" constant="20" id="qb9-iW-ntf"/>
@@ -103,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hxK-HJ-3xl" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-280" y="104"/>
+            <point key="canvasLocation" x="-281.15942028985512" y="103.79464285714285"/>
         </scene>
     </scenes>
     <resources>
